syntax = "proto3";

message Request {
  oneof payload {
    Login.Request login = 1;
    GetWall.Request get_wall = 2;
    GetState.Request get_state = 3;
    GetMe.Request get_me = 4;
  }
}

message Response {
  oneof payload {
    Login.Response login = 1;
    GetWall.Response get_wall = 2;
    GetState.Response get_state = 3;
    GetMe.Response get_me = 4;
  }
}

message GetMe {
  message Request { string token = 1; }

  enum ERROR_CODE {
    UNAUTHORIZED = 0;
  }

  message Response {
    oneof payload {
      Me me = 1;
      ERROR_CODE err = 2;
    }
  }
}

message GetWall {
  message Request { string token = 1; }

  enum ERROR_CODE {
    UNAUTHORIZED = 0;
  }

  message Response {
    oneof payload {
      Wall wall = 1;
      ERROR_CODE err = 2;
    }
  }
}

message Login {
  message Request {
    string login = 1;
    string password = 2;
  }

  enum ERROR_CODE {
    INVALID_CREDENTIALS = 0;
  }
  message Response {
    oneof payload {
      string token = 1;
      ERROR_CODE err = 2;
    }
  }
}

message GetState {
  message Request {}
  message Response { State state = 1; }
}

message Error { string message = 1; }

message State {}

message Options { bool debug_logging = 1; }

message Wall { repeated Twot twots = 1; }

message Twot {
  string id = 1;
  string author = 2;
  string text = 3;
}

message Me {
  string id = 1;
  string nickname = 2;
}
